HttpCompressionMiddleware COMPRESSION_KEEP_ENCODING_HEADERS updates
- HttpCompressionMiddleware constructor deprecation warning
- refactor process_response
- put COMPRESSION_KEEP_ENCODING_HEADER in settings.py.tmpl
- test HttpCompressionMiddleware init
- test COMPRESSION_KEEP_ENCODING_HEADERS presence
- ensure b'decoded' flag is set if decoded

--- a/scrapy/templates/project/module/settings.py.tmpl
+++ b/scrapy/templates/project/module/settings.py.tmpl
@@ -86,3 +86,6 @@ ROBOTSTXT_OBEY = True
 #HTTPCACHE_DIR = 'httpcache'
 #HTTPCACHE_IGNORE_HTTP_CODES = []
 #HTTPCACHE_STORAGE = 'scrapy.extensions.httpcache.FilesystemCacheStorage'
+
+# Keep the original Content-Encoding header
+COMPRESSION_KEEP_ENCODING_HEADER = True
