--- a/scrapy/templates/spiders/csvfeed.tmpl
+++ b/scrapy/templates/spiders/csvfeed.tmpl
@@ -2,19 +2,19 @@ from scrapy.spiders import CSVFeedSpider
 
 
 class $classname(CSVFeedSpider):
-    name = '$name'
-    allowed_domains = ['$domain']
-    start_urls = ['http://$domain/feed.csv']
+    name = "$name"
+    allowed_domains = ["$domain"]
+    start_urls = ["http://$domain/feed.csv"]
     # headers = ['id', 'name', 'description', 'image_link']
     # delimiter = '\t'
 
     # Do any adaptations you need here
-    #def adapt_response(self, response):
+    # def adapt_response(self, response):
     #    return response
 
     def parse_row(self, response, row):
         i = {}
-        #i['url'] = row['url']
-        #i['name'] = row['name']
-        #i['description'] = row['description']
+        # i['url'] = row['url']
+        # i['name'] = row['name']
+        # i['description'] = row['description']
         return i
