Added test case and code review suggestions

--- a/scrapy/templates/project/module/settings.py.tmpl
+++ b/scrapy/templates/project/module/settings.py.tmpl
@@ -86,6 +86,8 @@ ROBOTSTXT_OBEY = True
 #HTTPCACHE_DIR = "httpcache"
 #HTTPCACHE_IGNORE_HTTP_CODES = []
 #HTTPCACHE_STORAGE = "scrapy.extensions.httpcache.FilesystemCacheStorage"
+
+# Keep original Content-Encoding header
 COMPRESSION_KEEP_ENCODING_HEADER = True
 
 # Set settings whose default value is deprecated to a future-proof value
