--- a/scrapy/templates/spiders/crawl.tmpl
+++ b/scrapy/templates/spiders/crawl.tmpl
@@ -1,4 +1,5 @@
 import scrapy
+from scrapy.http import HtmlResponse
 from scrapy.linkextractors import LinkExtractor
 from scrapy.spiders import CrawlSpider, Rule
 
@@ -10,7 +11,7 @@ class $classname(CrawlSpider):
 
     rules = (Rule(LinkExtractor(allow=r"Items/"), callback="parse_item", follow=True),)
 
-    def parse_item(self, response):
+    def parse_item(self, response: HtmlResponse, **kwargs):
         item = {}
         #item["domain_id"] = response.xpath('//input[@id="sid"]/@value').get()
         #item["name"] = response.xpath('//div[@id="name"]').get()
