--- a/scrapy/templates/project/module/middlewares.py.tmpl
+++ b/scrapy/templates/project/module/middlewares.py.tmpl
@@ -4,6 +4,11 @@
 # https://docs.scrapy.org/en/latest/topics/spider-middleware.html
 
 from scrapy import signals
+from scrapy.http import HtmlResponse
+from scrapy.http.request import Request
+from scrapy.crawler import Crawler
+from scrapy.spiders import Spider
+from typing import Generator
 
 # useful for handling different item types with a single interface
 from itemadapter import is_item, ItemAdapter
@@ -15,20 +20,20 @@ class ${ProjectName}SpiderMiddleware:
     # passed objects.
 
     @classmethod
-    def from_crawler(cls, crawler):
+    def from_crawler(cls, crawler: Crawler):
         # This method is used by Scrapy to create your spiders.
         s = cls()
         crawler.signals.connect(s.spider_opened, signal=signals.spider_opened)
         return s
 
-    def process_spider_input(self, response, spider):
+    def process_spider_input(self, response: HtmlResponse, spider: Spider):
         # Called for each response that goes through the spider
         # middleware and into the spider.
 
         # Should return None or raise an exception.
         return None
 
-    def process_spider_output(self, response, result, spider):
+    def process_spider_output(self, response: HtmlResponse, result: Generator, spider: Spider):
         # Called with the results returned from the Spider, after
         # it has processed the response.
 
@@ -36,14 +41,14 @@ class ${ProjectName}SpiderMiddleware:
         for i in result:
             yield i
 
-    def process_spider_exception(self, response, exception, spider):
+    def process_spider_exception(self, response: HtmlResponse, exception, spider: Spider):
         # Called when a spider or process_spider_input() method
         # (from other spider middleware) raises an exception.
 
         # Should return either None or an iterable of Request or item objects.
         pass
 
-    def process_start_requests(self, start_requests, spider):
+    def process_start_requests(self, start_requests: Generator[Request], spider: Spider):
         # Called with the start requests of the spider, and works
         # similarly to the process_spider_output() method, except
         # that it doesn’t have a response associated.
@@ -52,7 +57,7 @@ class ${ProjectName}SpiderMiddleware:
         for r in start_requests:
             yield r
 
-    def spider_opened(self, spider):
+    def spider_opened(self, spider: Spider):
         spider.logger.info("Spider opened: %s" % spider.name)
 
 
@@ -62,13 +67,13 @@ class ${ProjectName}DownloaderMiddleware:
     # passed objects.
 
     @classmethod
-    def from_crawler(cls, crawler):
+    def from_crawler(cls, crawler: Crawler):
         # This method is used by Scrapy to create your spiders.
         s = cls()
         crawler.signals.connect(s.spider_opened, signal=signals.spider_opened)
         return s
 
-    def process_request(self, request, spider):
+    def process_request(self, request: Request, spider: Spider):
         # Called for each request that goes through the downloader
         # middleware.
 
@@ -80,7 +85,7 @@ class ${ProjectName}DownloaderMiddleware:
         #   installed downloader middleware will be called
         return None
 
-    def process_response(self, request, response, spider):
+    def process_response(self, request: Request, response: HtmlResponse, spider: Spider):
         # Called with the response returned from the downloader.
 
         # Must either;
@@ -89,7 +94,7 @@ class ${ProjectName}DownloaderMiddleware:
         # - or raise IgnoreRequest
         return response
 
-    def process_exception(self, request, exception, spider):
+    def process_exception(self, request: Request, exception, spider: Spider):
         # Called when a download handler or a process_request()
         # (from other downloader middleware) raises an exception.
 
@@ -99,5 +104,5 @@ class ${ProjectName}DownloaderMiddleware:
         # - return a Request object: stops process_exception() chain
         pass
 
-    def spider_opened(self, spider):
+    def spider_opened(self, spider: Spider):
         spider.logger.info("Spider opened: %s" % spider.name)
