Add ADDONS to the settings template for new projects

--- a/scrapy/templates/project/module/settings.py.tmpl
+++ b/scrapy/templates/project/module/settings.py.tmpl
@@ -12,6 +12,8 @@ BOT_NAME = "$project_name"
 SPIDER_MODULES = ["$project_name.spiders"]
 NEWSPIDER_MODULE = "$project_name.spiders"
 
+ADDONS = {}
+
 
 # Crawl responsibly by identifying yourself (and your website) on the user-agent
 #USER_AGENT = "$project_name (+http://www.yourdomain.com)"
