--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -8,6 +8,9 @@
 .rst-content dl p + ol, .rst-content dl p + ul {
     margin-top: -6px; /* Compensates margin-top: 12px of p  */
 }
+
+/*override some styles in
+sphinx-rtd-dark-mode/static/dark_mode_css/general.css*/
 .theme-switcher {
     right: 1.2em !important;
     bottom: 29em !important;
