--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -20,6 +20,8 @@ sphinx-rtd-dark-mode/static/dark_mode_css/general.css*/
     width: 2em !important;
 }
 
+/*place the toggle button for dark mode
+at the bottom right corner on small screens*/
 @media (max-width: 768px) {
     .theme-switcher {
         right: 0.4em !important;
@@ -28,10 +30,47 @@ sphinx-rtd-dark-mode/static/dark_mode_css/general.css*/
     }
 }
 
-html[data-theme="dark"] .wy-side-nav-search {
+/*persist blue color at the top left used in
+default rtd theme*/
+html[data-theme="dark"] .wy-side-nav-search, .wy-nav-top {
     background-color: #1d577d !important;
 }
 
-html[data-theme="dark"] .wy-nav-top {
-    background-color: #1d577d !important
+/*all the styles below used to present
+API objects nicely in dark mode*/
+html[data-theme="dark"] .sig.sig-object {
+    border-left-color: #3e4446 !important;
+    background-color: #202325 !important
+}
+
+html[data-theme="dark"] .sig-name{
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .sig-prename {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .property {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .sig-param {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .sig-paren {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .sig-return-icon {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .sig-return-typehint {
+    color: #e8e6e3 !important
+}
+
+html[data-theme="dark"] .optional {
+    color: #e8e6e3 !important
 }
